@@ -1,0 +1,14 @@
+target "elk-0.7"
+
+with source, requirements
+
+location ELK-0.7 "https://download.eclipse.org/elk/updates/releases/0.7.0/" {
+    org.eclipse.elk.sdk.feature.feature.group lazy
+    org.eclipse.elk.sdk.feature.source.feature.group lazy
+    org.eclipse.elk.feature.feature.group lazy
+    org.eclipse.elk.feature.source.feature.group lazy
+    org.eclipse.elk.algorithms.feature.feature.group lazy
+    org.eclipse.elk.algorithms.feature.source.feature.group lazy
+    org.eclipse.elk.graphviz.feature.feature.group lazy
+    org.eclipse.elk.graphviz.feature.source.feature.group lazy
+}
