@@ -6,7 +6,7 @@ include "modules/shared-license.tpd"
 include "modules/aql-3.7.tpd"
 include "modules/acceleo-3.7.tpd"
 include "modules/eef-2.1.tpd"
-include "modules/elk-0.6.tpd"
+include "modules/elk-0.7.tpd"
 include "modules/jetty-9.4.tpd"
 include "modules/gmf-runtime-1.13.tpd"
 
